--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,21 +14,27 @@ body{
   font-family: Nunito Sans;
 }
 
-.header {
+header {
   background-color: #D83F3F;
-  height: 18vh;
+}
+
+
+.header {
+  height: 11rem;
   color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   align-content: center;
-  padding: 0 40px;
+  padding: 0 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .logo > img {
   display: flex;
-  width: 7vw;
+  width: 6rem;
   height: auto;
 }
 
@@ -46,10 +52,12 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 15rem;
+  padding: 20px;
   list-style: none;
   margin-left: 6rem;
   white-space: nowrap;
+  max-width: 620px;
+  min-width: 580px;
 }
 
 
@@ -182,4 +190,10 @@ body{
   transform: translateY(1px);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
   cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .header-list {
+    display: none;
+  }
 }
